--- a/deploy/templates/database.yml
+++ b/deploy/templates/database.yml
@@ -1,9 +1,9 @@
 production:
   adapter: mysql
   encoding: utf8
-  database: <%= application %>_production
-  username: <%= application %>_site
-  password: password
+  database: patentlo_production
+  username: patentlo_site
+  password: patent@123
   host: localhost
 
 development:
